# router/app.go
@@ -23,6 +23,7 @@ func InitRouter() *gin.Engine {
 
 	//用户路由
 	r.GET("/user-detail", service.GetUserDetail)
+	r.POST("/login", service.Login)
 
 	//提交记录
 	r.GET("/submit-list", service.GetSubmitList)
